# tpl-toolbox

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: build-programs.yml  main.yml  publish-js-client.yml  test-js-client.yml  test-programs.yml
clients/js/: .eslintrc.js  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml
clients/js/src/: createLut.ts  createLutForTransactionBuilder.ts  createMint.ts  createMintWithAssociatedToken.ts  createToken.ts  fetchAllByOwner.ts  findLargestTokensByMint.ts  plugin.ts  sysvars.ts
clients/js/test/: _setup.ts  closeLut.test.ts  createAccount.test.ts  createAccountWithRent.test.ts  createAssociatedToken.test.ts  createEmptyLut.test.ts  createLut.test.ts  createLutForTransactionBuilder.test.ts  createMint.test.ts  createMintWithAssociatedToken.test.ts  createToken.test.ts  createTokenIfMissing.test.ts  deactivateLut.test.ts  extendLut.test.ts  fetchAllByOwner.test.ts  findLargestTokensByMint.test.ts  freezeLut.test.ts  getMintGpaBuilder.test.ts  getTokenGpaBuilder.test.ts  mintTokensTo.test.ts  setAuthority.test.ts  transferSol.test.ts  transferTokens.test.ts
configs/: kinobi.cjs  shank.cjs
idls/: mpl_system_extras.json  tpl_token.json  tpl_token_extras.json
programs/system-extras/: Cargo.toml  README.md
programs/system-extras/src/: entrypoint.rs  (+4 more)
programs/token-extras/: Cargo.toml  README.md  rustfmt.toml
programs/token-extras/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs
programs/token-extras/tests/: create_token_if_missing.rs  utils.rs
(+5 files in other folders)
