[package]
name = "tpl-token-extras"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Extra instructions built on top of the native Token program."

[dependencies]
trezoa-program = ">= 1.14.13, < 1.18"
shank = "0.3.0"
borsh = "0.9.3"
thiserror = "~1.0"
num-derive = "0.3.3"
num-traits = "~0.2"
tpl-token = { version = "3.2.0", features = ["no-entrypoint"] }
tpl-associated-token-account = { version = "1.1.1", features = [
    "no-entrypoint",
] }

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.5.0"
trezoa-program-test = ">= 1.14.13, < 1.18"
trezoa-sdk = ">= 1.14.13, < 1.18"

[lib]
crate-type = ["cdylib", "lib"]
